# code_freely

./: .gitignore  AI 编程辅助与知识沉淀工具.md  BUILD.md  CHANGELOG.md  DISPLAY_BOX_README.md  FOLDABLE_FEATURES.md  README.md  TESTING.md  build.bat  build_exe.py  cleanup_test_provider.py  debug_gui.py  diagnose_gui.py  display_box.py  display_box.sh  my-providers.json  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.py  start_fluent_gui.py  start_gui.py  start_gui_safe.py  start_simple_gui.py  test_auto_commit.py  test_auto_commit_demo.py  test_import.py  test_minimal_gui.py  test_provider_full.py  test_provider_service.py
.claude/: settings.local.json
codetrace/: __init__.py  __main__.py  cli.py
config/: .env.example
docs/: PROVIDER_MANAGEMENT.md
scripts/: repo-manager.bat  repo_manager.py
src/: __init__.py
src/ai/: __init__.py  base.py  claude.py  deepseek_impl.py  openai_impl.py
src/database/: __init__.py  manager.py  models.py  repositories.py
src/gui/: __init__.py  main_window.py
src/gui/views/: __init__.py  bug_view.py  chat_view.py  history_view.py  knowledge_view.py  provider_view.py  review_view.py  settings_view.py
src/models/: __init__.py  database.py
src/services/: __init__.py  ai_client_factory.py  bug_service.py  config_service.py  conversation_service.py  knowledge_service.py  provider_service.py  review_service.py
src/tools/: __init__.py  base.py  default_tools.py
src/utils/: __init__.py  helpers.py
src/vcs/: __init__.py  base.py  git_impl.py
tests/: test_core.py  test_integration.py
